--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
+            <groupId>org.simpleframework</groupId>
+            <artifactId>simple-xml</artifactId>
+            <version>2.7.1</version>
         </dependency>
     </dependencies>
 
@@ -62,7 +62,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.5.3.RELEASE</version>
                 <configuration>
-                    <mainClass>org.starlightfinancial.wechatinterface.main.Application</mainClass>
+                    <mainClass>org.starlightfinancial.wechatinterface.Application</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
@@ -75,5 +75,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
